[gd_scene load_steps=9 format=2]

[ext_resource path="res://DungeonCrawler/UI/PageTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fonts/Montserrat-ExtraBold_8.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Fonts/Montserrat-ExtraBold_6.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/v1.1 dungeon crawler 16x16 pixel pack/ui (new)/menu_button_press.png" type="Texture" id=4]
[ext_resource path="res://Assets/v1.1 dungeon crawler 16x16 pixel pack/ui (new)/menu_button.png" type="Texture" id=5]
[ext_resource path="res://DungeonCrawler/UI/Settings/ChangeDisplayName.gd" type="Script" id=6]
[ext_resource path="res://Assets/ui/back_button_pressed.png" type="Texture" id=7]
[ext_resource path="res://Assets/ui/back_button.png" type="Texture" id=8]

[node name="ChangeDisplayName" instance=ExtResource( 1 )]
script = ExtResource( 6 )

[node name="Label" parent="." index="3"]
text = "Change Display name"

[node name="BackButton" parent="." index="4"]
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )

[node name="ChangeDisplayNameBox" type="VBoxContainer" parent="." index="5"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.5
margin_top = -19.0
margin_right = 88.5
margin_bottom = 19.0
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewDisplayName" type="HBoxContainer" parent="ChangeDisplayNameBox" index="0"]
margin_right = 177.0
margin_bottom = 18.0

[node name="Label" type="Label" parent="ChangeDisplayNameBox/NewDisplayName" index="0"]
margin_top = 1.0
margin_right = 98.0
margin_bottom = 16.0
rect_min_size = Vector2( 98, 15 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.960784, 0.960784, 0.921569, 1 )
text = "New Display Name:"
align = 2
valign = 1
uppercase = true

[node name="LineEdit" type="LineEdit" parent="ChangeDisplayNameBox/NewDisplayName" index="1"]
margin_left = 102.0
margin_right = 177.0
margin_bottom = 18.0
rect_min_size = Vector2( 75, 18 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )

[node name="ReenterName" type="HBoxContainer" parent="ChangeDisplayNameBox" index="1"]
margin_top = 20.0
margin_right = 177.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="ChangeDisplayNameBox/ReenterName" index="0"]
margin_top = 1.0
margin_right = 98.0
margin_bottom = 16.0
rect_min_size = Vector2( 98, 15 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.960784, 0.960784, 0.921569, 1 )
text = "Re-enter name:"
align = 2
valign = 1
autowrap = true
uppercase = true

[node name="LineEdit" type="LineEdit" parent="ChangeDisplayNameBox/ReenterName" index="1"]
margin_left = 102.0
margin_right = 177.0
margin_bottom = 18.0
rect_min_size = Vector2( 75, 18 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )

[node name="ButtonContainer" type="HBoxContainer" parent="." index="6"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 28.0
margin_right = 40.0
margin_bottom = 48.0
rect_min_size = Vector2( 80, 20 )
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubmitButton" type="TextureButton" parent="ButtonContainer" index="0"]
margin_right = 80.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="ButtonContainer/SubmitButton" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 80, 20 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.137255, 0.137255, 0.121569, 1 )
text = "Submit"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="ButtonContainer/SubmitButton" to="." method="_on_SubmitButton_pressed"]
